tests/error/unknown_new.gw
// [contains] unknown type
new kugsqd;
